data/derived/comb/progs/unify/prog1978.ml.out
Characters 98-99:
  | (s,i) as h::t -> if s = k then i else assoc (d k t);;
                                                     ^
Error: This expression has type ('a * ('a -> 'b -> 'c)) list
       but an expression was expected of type 'b
       The type variable 'b occurs inside ('a * ('a -> 'b -> 'c)) list
